--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react": "^5.1.0",
     "axios": "^1.4.0",
     "framer-motion": "^12.23.12",
     "react": "^18.2.0",
