--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "postinstall": "npm install @vitejs/plugin-react"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^5.1.0",
