--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "postinstall": "npm install @vitejs/plugin-react"
+    "vercel-build": "npm install && npm run build"
   },
   "dependencies": {
     "@vitejs/plugin-react": "^5.1.0",
