--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,9 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
-    "mysql2": "^3.3.0",
-    "sequelize": "^6.32.1"
+    "mysql2": "^3.15.3",
+    "sequelize": "^6.32.1",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
